make sure the quotes aren't too wide for the slider

--- a/src/main/js/common/embeds/Quotes.css
+++ b/src/main/js/common/embeds/Quotes.css
@@ -44,6 +44,7 @@
 	& :global(.slick-slide) {
 		padding: 30px;
 		outline: none;
+		max-width: 25%;
 	}
 
 	& .quote {
